# face-recognition-api

./: .gitignore  LICENSE  PROJECT_STRUCTURE.md  README.md  pyproject.toml
docs/: HAILO_SETUP.md  TEST_REPORT.md
docs/reference/: hailo_python_guide.md
hailort-4.21.0/: README.md
scripts/: compare_aligned_faces.py  compare_faces.py  run_tests.py  start_server.py  test_hailo_request.py  verify_multi_model.py
src/: __init__.py  app.py  database.py
tests/: __init__.py
tests/integration/: __init__.py  test_api_integration.py
tests/unit/: __init__.py  test_face_embed_api.py
